--- a/colab_setting.ipynb
+++ b/colab_setting.ipynb
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 구글 드라이브와 Colab 연동"
+        "### 구글 드라이브와 Colab 연동 (구글 가입후 로그인해야함)"
       ]
     },
     {
@@ -42,9 +42,9 @@
         "colab": {}
       },
       "source": [
-        "# 구글 드라이브와 Colab 연동\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive') # 출력되는 URL에 접속하여 verification code 복사 및 붙여넣기"
+        "drive.mount('/content/drive'), 
+        "# 출력되는 URL에 접속하여 verification code 복사 및 붙여넣기"
       ],
       "execution_count": 0,
       "outputs": []
