--- a/LRP/LSTM_example.ipynb
+++ b/LRP/LSTM_example.ipynb
@@ -145,13 +145,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "For more detail preprocessing script, please refer './preprocessing.ipynb'"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -161,6 +154,7 @@
    },
    "outputs": [],
    "source": [
+    "#For more detail preprocessing script, please refer 'PyConKorea2019-Tutorials/LRP/preprocessing.ipynb'\n",
     "import pickle\n",
     "import numpy as np\n",
     "#load \n",
